--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="contact-table-container">
-  <table id="contactsTable">
+  <table id="contactsTable" style="opacity: 0; transition: opacity 0.3s ease;">
     <thead>
       <tr>
         <th class="sortable" data-column-index="0" data-sort-type="string">Name</th>
