--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -38,7 +38,7 @@
         </select>
       </div>
       <div>
-        <label for="username">Username or Email:</label>
+        <label for="username">Username, Email, or Phone:</label>
         <input type="text" id="username" name="username" autocomplete="username" required />
       </div>
       <div>
