--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -189,10 +189,10 @@
       </thead>
       <tbody>
         {% for user in all_users %}
-        <tr class="{{ 'inactive-user' if user.Status == 'inactive' else '' }}">
+        <tr class="{{ 'inactive-user' if user.status == 'inactive' else '' }}">
           <td>{{ loop.index }}</td>
           <td>
-            {% if user.contact %} {{ user.contact.Name }} ({{ user.Username }})
+            {% if user.contact %} {{ user.contact.Name }} ({{ user.username }})
             <i class="fas fa-link user-link-icon"></i>
             {% else %}
             <em class="user-not-linked">Not Linked</em>
@@ -205,7 +205,7 @@
             <em class="text-muted">No Role</em>
             {% endfor %}
           </td>
-          <td>{{ user.Email if user.Email else '' }}</td>
+          <td>{{ user.email if user.email else '' }}</td>
           <td>
             {{ user.contact.Phone_Number if user.contact and
             user.contact.Phone_Number else '' }}
@@ -213,7 +213,7 @@
           <td>{{ user.contact.mentor.Name if user.contact and user.contact.mentor else '' }}</td>
           <td>{{ user.contact.Current_Path if user.contact and user.contact.Current_Path else '' }}</td>
           <td>{{ user.contact.Next_Project if user.contact and user.contact.Next_Project else '' }}</td>
-          <td>{{ user.Status }}</td>
+          <td>{{ user.status }}</td>
           <td>
             <div class="action-links">
               <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="icon-btn" title="Edit"><i
